; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/usbvideo/extr_ibmcam.c_ibmcam_send_x_00_05_02.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/usbvideo/extr_ibmcam.c_ibmcam_send_x_00_05_02.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uvd = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.uvd*, i16)* @ibmcam_send_x_00_05_02 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ibmcam_send_x_00_05_02(%struct.uvd* %0, i16 zeroext %1) #0 {
  %3 = alloca %struct.uvd*, align 8
  %4 = alloca i16, align 2
  store %struct.uvd* %0, %struct.uvd** %3, align 8
  store i16 %1, i16* %4, align 2
  %5 = load %struct.uvd*, %struct.uvd** %3, align 8
  %6 = load i16, i16* %4, align 2
  %7 = zext i16 %6 to i32
  %8 = call i32 @ibmcam_veio(%struct.uvd* %5, i32 0, i32 %7, i32 295)
  %9 = load %struct.uvd*, %struct.uvd** %3, align 8
  %10 = call i32 @ibmcam_veio(%struct.uvd* %9, i32 0, i32 0, i32 292)
  %11 = load %struct.uvd*, %struct.uvd** %3, align 8
  %12 = call i32 @ibmcam_veio(%struct.uvd* %11, i32 0, i32 5, i32 292)
  %13 = load %struct.uvd*, %struct.uvd** %3, align 8
  %14 = call i32 @ibmcam_veio(%struct.uvd* %13, i32 0, i32 2, i32 292)
  ret void
}

declare dso_local i32 @ibmcam_veio(%struct.uvd*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
